# egui-portfolio

./: LICENSE  README.md  Trunk.toml  index.html  portfolio.js  portfolio_bg.wasm
.github/workflows/: pages-deploy.yml
portfolio/: Cargo.toml  index.html
portfolio/src/: app.rs  main.rs
