[package]
name = "portfolio"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.31.0"
wasm-bindgen = "0.2.99"
log = "0.4.22"
# serde only required for persistence
serde = { version = "1.0.217", features = ["derive"] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70"
